force-app/main/default/objects/Aqua_Inventory_Adjustment__c/Aqua_Inventory_Adjustment__c.object-meta.xml
<CustomObject>
    <description>Tracks Aqua inventory adjustments with three reason codes that drive different downstream workflows. All three reason codes fire inventory reconciliation; reasons A and C also fire billing.</description>
    <label>Aqua Inventory Adjustment</label>
    <nameField>
        <displayFormat>AIA-{YYYY}-{0000}</displayFormat>
        <label>Adjustment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aqua Inventory Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>