force-app/main/default/objects/Aqua_Inventory_Adjustment__c/fields/Adjustment_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_DateTime__c</fullName>
    <label>Adjustment DateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>