force-app/main/default/objects/Aqua_Inventory_Adjustment__c/fields/Aqua_Inventory_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Aqua_Inventory_Reason_Code__c</fullName>
    <label>Reason Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(A) Missing Material (Stolen)</fullName>
            </value>
            <value>
                <fullName>(B) Damaged or Malfunctioning (Warranty)</fullName>
            </value>
            <value>
                <fullName>(C) Additional Coverage Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>