force-app/main/default/objects/Aqua_Inventory_Adjustment__c/fields/Item_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Item_Catalog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>Item_Catalog__c</referenceTo>
    <relationshipName>Aqua_Inventory_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>