force-app/main/default/objects/Aqua_Inventory_Adjustment__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lot</label>
    <referenceTo>Lot__c</referenceTo>
    <relationshipName>Aqua_Inventory_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>