force-app/main/default/objects/Aqua_Inventory_Adjustment__c/fields/Service_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Service_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this adjustment to the Aqua Service Ticket for traceability and billing context.</description>
    <label>Service Ticket</label>
    <referenceTo>Service_Ticket__c</referenceTo>
    <relationshipLabel>Aqua Inventory Adjustments</relationshipLabel>
    <relationshipName>Aqua_Inventory_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>