force-app/main/default/objects/Aqua_Inventory_Adjustment__c/fields/Tech__c.field-meta.xml
<CustomField>
    <fullName>Tech__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tech</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Aqua_Inventory_Adjustments_Tech</relationshipName>
    <type>Lookup</type>
</CustomField>