force-app/main/default/objects/Aqua_Inventory_Adjustment__c/fields/Triggers_Billing_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Triggers_Billing_Workflow__c</fullName>
    <formula>OR(ISPICKVAL(Aqua_Inventory_Reason_Code__c, &quot;(A) Missing Material (Stolen)&quot;), ISPICKVAL(Aqua_Inventory_Reason_Code__c, &quot;(C) Additional Coverage Needed&quot;))</formula>
    <label>Triggers Billing Workflow</label>
    <type>Checkbox</type>
</CustomField>