force-app/main/default/objects/Aqua_Inventory_Adjustment__c/fields/Triggers_Inventory_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Triggers_Inventory_Workflow__c</fullName>
    <formula>NOT(ISBLANK(TEXT(Aqua_Inventory_Reason_Code__c)))</formula>
    <label>Triggers Inventory Workflow</label>
    <type>Checkbox</type>
</CustomField>