force-app/main/default/objects/Aqua_Inventory_Adjustment__c/validationRules/Quantity_Cannot_Be_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Cannot_Be_Zero</fullName>
    <active>true</active>
    <description>Quantity must be non-zero to record an adjustment.</description>
    <errorConditionFormula>Quantity__c = 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity cannot be zero. Enter the actual adjustment quantity.</errorMessage>
</ValidationRule>