force-app/main/default/objects/Aqua_Inventory_Adjustment__c/validationRules/Reason_Code_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Code_Required</fullName>
    <active>true</active>
    <description>Reason code required to save</description>
    <errorConditionFormula>AND(
    NOT($Profile.Name = &quot;System Administrator&quot;),
    (ISBLANK(TEXT(Aqua_Inventory_Reason_Code__c)))
)</errorConditionFormula>
    <errorDisplayField>Aqua_Inventory_Reason_Code__c</errorDisplayField>
    <errorMessage>Cannot save without reason code</errorMessage>
</ValidationRule>